logs/dag_id=etl_22024-08-21/run_id=scheduled__2024-08-07T00:00:00+00:00/task_id=final_etl_processing/attempt=1.log
[2024-08-21T06:27:45.408+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-08-21T06:27:45.493+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: etl_22024-08-21.final_etl_processing scheduled__2024-08-07T00:00:00+00:00 [queued]>
[2024-08-21T06:27:45.538+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: etl_22024-08-21.final_etl_processing scheduled__2024-08-07T00:00:00+00:00 [queued]>
[2024-08-21T06:27:45.546+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 2
[2024-08-21T06:27:45.683+0000] {taskinstance.py:2330} INFO - Executing <Task(BashOperator): final_etl_processing> on 2024-08-07 00:00:00+00:00
[2024-08-21T06:27:45.708+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=4542) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2024-08-21T06:27:45.720+0000] {standard_task_runner.py:63} INFO - Started process 4548 to run task
[2024-08-21T06:27:45.720+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'etl_22024-08-21', 'final_etl_processing', 'scheduled__2024-08-07T00:00:00+00:00', '--job-id', '767', '--raw', '--subdir', 'DAGS_FOLDER/final_etl.py', '--cfg-path', '/tmp/tmprzyyg5gz']
[2024-08-21T06:27:45.745+0000] {standard_task_runner.py:91} INFO - Job 767: Subtask final_etl_processing
[2024-08-21T06:27:46.068+0000] {task_command.py:426} INFO - Running <TaskInstance: etl_22024-08-21.final_etl_processing scheduled__2024-08-07T00:00:00+00:00 [running]> on host 7e1333882d71
[2024-08-21T06:27:46.387+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='etl_22024-08-21' AIRFLOW_CTX_TASK_ID='final_etl_processing' AIRFLOW_CTX_EXECUTION_DATE='2024-08-07T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-08-07T00:00:00+00:00'
[2024-08-21T06:27:46.391+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-08-21T06:27:46.438+0000] {subprocess.py:63} INFO - Tmp dir root location: /tmp
[2024-08-21T06:27:46.444+0000] {subprocess.py:75} INFO - Running command: ['/usr/bin/bash', '-c', "python3 /opt/***/data/etl_m12.py --connection postgresql+psycopg2://***:***@postgres/postgres --csv ''"]
[2024-08-21T06:27:46.483+0000] {subprocess.py:86} INFO - Output:
[2024-08-21T06:27:46.605+0000] {subprocess.py:93} INFO -   File "/opt/***/data/etl_m12.py", line 155
[2024-08-21T06:27:46.617+0000] {subprocess.py:93} INFO -     # main(args.csv, args.connection)
[2024-08-21T06:27:46.655+0000] {subprocess.py:93} INFO - IndentationError: expected an indented block after 'if' statement on line 147
[2024-08-21T06:27:46.672+0000] {subprocess.py:97} INFO - Command exited with return code 1
[2024-08-21T06:27:46.689+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-08-21T06:27:46.765+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/bash.py", line 243, in execute
    raise AirflowException(
airflow.exceptions.AirflowException: Bash command failed. The command returned a non-zero exit code 1.
[2024-08-21T06:27:46.791+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=etl_22024-08-21, task_id=final_etl_processing, run_id=scheduled__2024-08-07T00:00:00+00:00, execution_date=20240807T000000, start_date=20240821T062745, end_date=20240821T062746
[2024-08-21T06:27:46.948+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 767 for task final_etl_processing (Bash command failed. The command returned a non-zero exit code 1.; 4548)
[2024-08-21T06:27:47.068+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-08-21T06:27:47.150+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
